# argus

./: pyproject.toml
argus/backend/plugins/sct/: controller.py  plugin.py  testrun.py
argus/backend/tests/: conftest.py
argus/backend/tests/sct_events/: test_sct_events.py
argusAI/: pyproject.toml
argusAI/similar-events/: tester.py
argusAI/testrun-investigator/: .gitignore  README.md  pyproject.toml
argusAI/testrun-investigator/docs/: mcp_server.md  victoria_logs.md
argusAI/testrun-investigator/examples/: complete_workflow.py  mcp_server_demo.py  victoria_logs_demo.py
argusAI/testrun-investigator/knowledge_base/: generic.md
argusAI/testrun-investigator/testrun_investigator/: __init__.py  rag.py  server.py  test_run_info.py  victoria_logs.py
argusAI/testrun-investigator/tests/: __init__.py  conftest.py  test_rag.py  test_server.py  test_test_run_info.py  test_victoria_logs.py
argusAI/testrun-investigator/tests/test_docs/: api_endpoint_failures.md  database_connection_failures.md  network_test_failures.md  ui_component_failures.md
dev-db/: docker-compose.yaml
frontend/Profile/: PlannedJobs.svelte  ProfileJobs.svelte
