[project]
name = "testrun-investigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
    "chromadb>=1.0.10",
    "watchdog>=6.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "zstandard>=0.22.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "argus-alm>=0.14.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"
